# tomographic-reconstruction

./: .gitmodules  LICENSE  README.md
raytracer/: CMakeLists.txt  README.md
raytracer/include/: camera.h  general_def.h  raytracing_object.h  utility.h
raytracer/src/: camera.cpp  main.cpp  raytracing_object.cpp  utility.cpp
script/: .gitignore  config.json  recon_parallel.py
script/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
